# RTSP_

./: CMakeLists.txt  Dockerfile  README.md  changes.md  desktop_streamer.cpp  desktop_streamer.h  docker-compose.yml  main.cpp  main.h  requirements.txt  webrtc_server.py
WinRT-API/: capture_base.h  capture_dda.cpp  capture_dda.h  capture_wgc.cpp  capture_wgc.h  encoder.h  encoder_amf.cpp  encoder_amf.h  encoder_ave.cpp  encoder_ave.h  encoder_qsv.cpp  encoder_qsv.h  encoder_x264.cpp  encoder_x264.h  main.cpp  rdp_agent.cpp  rdp_agent.h
build64/: ALL_BUILD.vcxproj  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  desktop_streamer.slnx  desktop_streamer.vcxproj  desktop_streamer.vcxproj.filters
build64/desktop_streamer.dir/Release/: desktop_streamer.exe.recipe
build64/desktop_streamer.dir/Release/desktop_streamer.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
build64/x64/Release/ALL_BUILD/: ALL_BUILD.recipe
build64/x64/Release/ALL_BUILD/ALL_BUILD.tlog/: CustomBuild.command.1.tlog
build64/x64/Release/ZERO_CHECK/: ZERO_CHECK.recipe
build64/x64/Release/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  ZERO_CHECK.lastbuildstate
rtp/: h264_rtp_packetizer.cpp  h264_rtp_packetizer.h  rtp_header.h
rtsp/: rtsp_server.cpp  rtsp_server.h
